[package]
name = "rust"
version = "0.1.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.4.0", features = ["attributes"] }

[[bin]]
name = "1"
path = "src/1.rs"

[[bin]]
name = "2"
path = "src/2.rs"

[[bin]]
name = "3"
path = "src/3.rs"

[[bin]]
name = "4"
path = "src/4.rs"
